# package_perso

./: .gitignore  requirements.txt  setup.cfg  tf_object_detection_model.py
models/: label_map.txt
models/saved_model/variables/: variables.index
src/package_perso/: logger_utils.py  object_detection_model.py  tf_object_detection_model.py  tflite_object_detection.py  tflite_object_detection_model.py
test/: test_logger_utils.py  test_tf_object_detection_model.py  test_tflite_object_detection.py
test/models/: label_map.json  ssd_mobilenet_v2_6.tflite
test/test_object_detection_class/: test_tf_object_detection_class.py
