[metadata]
name = package_perso
version = 0.0.1
author = Leo Babonnaud
author_email = leo.babonnaud@gmail.com
description = A package that encapsulates all personal utils
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/leob33/package_perso
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    tensorflow==2.7.0
    opencv-python==4.5.1.48
    pytest==6.2.5

[options.packages.find]
where = src